[package]
name = "multibody_dynamics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version = "0.32", default-features = false, features = ["libm", "alloc"]}
num-traits     = { version = "0.2", default-features = false, features = ["libm"] }
# num-traits     = { version = "0.2" }
# nalgebra = "0.32"
# typenum        = "1.12"
# num-traits     = { version = "0.2", default-features = false }
approx = "0.5"
